--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     tr[data-rarity="SY"]  { background-color: #f0fffc; }
     tr[data-rarity="U"]   { background-color: #f3f3f3; }
     tr[data-rarity="UR"]  { background-color: #ffe8f8; }
+    tr[data-rarity="-"]   { background-color: #ffffff; }
   </style>
 </head>
 <body>
