--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <style>
     body {
       font-family: sans-serif;
-      margin: 10px;
       font-size: 15px;
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
+      margin: 0;
+      width: 100vw;
+      height: 100vh;
     }
     h2 { text-align: center; margin-bottom: 10px; }
     table {
