--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <style>
     body {
       font-family: sans-serif;
+      margin: 0;
       font-size: 15px;
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
-      margin: 0;
-      width: 100vw;
-      height: 100vh;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 10px;
     }
     h2 { text-align: center; margin-bottom: 10px; }
     table {
@@ -30,9 +33,10 @@
     td:nth-child(3), td.rarity {
       white-space: nowrap;
     }
-    input[type="number"] { width: 40px; }
-    @media (max-width: 600px) {
-      input[type="number"] { width: 36px; }
+    td.rarity, th.rarity {
+      font-size: 13px;
+      width: 40px;
+      text-align: center;
     }
     img {
       width: 60px;
@@ -40,6 +44,15 @@
       cursor: zoom-in;
       background-color: #fff;
       border: 1px solid #ddd;
+    }
+    input[type="number"] {
+      width: 40px;
+      background-color: #fff !important;
+      color: #000;
+      border: 1px solid #ccc;
+    }
+    @media (max-width: 600px) {
+      input[type="number"] { width: 36px; }
     }
     .controls {
       display: flex;
@@ -81,209 +94,210 @@
     tr[data-rarity="SY"]  { background-color: #f0fffc; }
     tr[data-rarity="U"]   { background-color: #f3f3f3; }
     tr[data-rarity="UR"]  { background-color: #ffe8f8; }
-    tr[data-rarity="-"]   { background-color: #ffffff; }
   </style>
 </head>
 <body>
-  <h2>ホロライブカード一覧</h2>
-  <div class="controls">
-    <button onclick="toggleDarkMode()">🌗 モード切替</button>
-    <input type="text" id="nameSearch" placeholder="カード名検索" oninput="renderTable()" />
-    <select id="rarityFilter" onchange="renderTable()"></select>
-    <select id="colorFilter" onchange="renderTable()"></select>
-    <select id="bloomFilter" onchange="renderTable()"></select>
-    <select id="productFilter" onchange="renderTable()"></select>
-    <label><input type="checkbox" id="ownedFilter" onchange="renderTable()"> 所持ありのみ</label>
-  </div>
+  <div class="container">
+    <h2>ホロライブカード一覧</h2>
+    <div class="controls">
+      <button onclick="toggleDarkMode()">🌗 モード切替</button>
+      <input type="text" id="nameSearch" placeholder="カード名検索" oninput="renderTable()" />
+      <select id="rarityFilter" onchange="renderTable()"></select>
+      <select id="colorFilter" onchange="renderTable()"></select>
+      <select id="bloomFilter" onchange="renderTable()"></select>
+      <select id="productFilter" onchange="renderTable()"></select>
+      <label><input type="checkbox" id="ownedFilter" onchange="renderTable()"> 所持ありのみ</label>
+    </div>
 
-  <div id="countDisplay" style="font-weight:bold; margin-bottom:10px;"></div>
+    <div id="countDisplay" style="font-weight:bold; margin-bottom:10px;"></div>
 
-  <table id="cardTable">
-    <thead>
-      <tr>
-        <th>画像</th>
-        <th>名前</th>
-        <th>番号</th>
-        <th class="rarity">レア</th>
-        <th>色</th>
-        <th>Bloom</th>
-        <th>HP</th>
-        <th>収録</th>
-        <th>枚数</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <table id="cardTable">
+      <thead>
+        <tr>
+          <th>画像</th>
+          <th>名前</th>
+          <th>番号</th>
+          <th class="rarity">レア</th>
+          <th>色</th>
+          <th>Bloom</th>
+          <th>HP</th>
+          <th>収録</th>
+          <th>枚数</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-  <h3>CSVインポート・エクスポート</h3>
-  <div class="controls">
-    <textarea id="csvInput" rows="4" placeholder="id,枚数 のCSVを貼り付けてください"></textarea>
-    <button onclick="importCSV()">📥 CSVインポート</button>
-    <button onclick="exportCSV()">📤 所持CSVをコピー</button>
-  </div>
-  <div id="imageModal" onclick="hideImageModal()" style="
-    display:none;
-    position:fixed;
-    top:0; left:0;
-    width:100vw; height:100vh;
-    background:rgba(0,0,0,0.8);
-    text-align:center;
-    z-index:1000;
-    cursor:zoom-out;">
-    <img src="" style="margin-top:5vh; width:100vw; max-height:90vh; object-fit:contain;">
-  </div>
+    <h3>CSVインポート・エクスポート</h3>
+    <div class="controls">
+      <textarea id="csvInput" rows="4" placeholder="id,枚数 のCSVを貼り付けてください"></textarea>
+      <button onclick="importCSV()">📥 CSVインポート</button>
+      <button onclick="exportCSV()">📤 所持CSVをコピー</button>
+    </div>
+    <div id="imageModal" onclick="hideImageModal()" style="
+      display:none;
+      position:fixed;
+      top:0; left:0;
+      width:100vw; height:100vh;
+      background:rgba(0,0,0,0.8);
+      text-align:center;
+      z-index:1000;
+      cursor:zoom-out;">
+      <img src="" style="margin-top:5vh; width:100vw; max-height:90vh; object-fit:contain;">
+    </div>
 
-  <script>
-    let cards = [];
+    <script>
+      let cards = [];
 
-    function setupFilters() {
-      const raritySet = new Set(), colorSet = new Set(),
-            bloomSet = new Set(), productSet = new Set();
-      cards.forEach(c => {
-        raritySet.add(c.rarity);
-        colorSet.add(c.color);
-        bloomSet.add(c.bloom);
-        productSet.add(c.product);
-      });
-
-      function populate(id, items, label) {
-        const select = document.getElementById(id);
-        select.innerHTML = `<option value="">${label}</option>`;
-        [...items].sort().forEach(val => {
-          const opt = document.createElement("option");
-          opt.value = val;
-          opt.textContent = val;
-          select.appendChild(opt);
+      function setupFilters() {
+        const raritySet = new Set(), colorSet = new Set(),
+              bloomSet = new Set(), productSet = new Set();
+        cards.forEach(c => {
+          raritySet.add(c.rarity);
+          colorSet.add(c.color);
+          bloomSet.add(c.bloom);
+          productSet.add(c.product);
         });
+
+        function populate(id, items, label) {
+          const select = document.getElementById(id);
+          select.innerHTML = `<option value="">${label}</option>`;
+          [...items].sort().forEach(val => {
+            const opt = document.createElement("option");
+            opt.value = val;
+            opt.textContent = val;
+            select.appendChild(opt);
+          });
+        }
+
+        populate("rarityFilter", raritySet, "レアリティ");
+        populate("colorFilter", colorSet, "色");
+        populate("bloomFilter", bloomSet, "Bloom");
+        populate("productFilter", productSet, "収録商品");
       }
 
-      populate("rarityFilter", raritySet, "レアリティ");
-      populate("colorFilter", colorSet, "色");
-      populate("bloomFilter", bloomSet, "Bloom");
-      populate("productFilter", productSet, "収録商品");
-    }
+      function renderTable() {
+        const keyword = document.getElementById("nameSearch").value.toLowerCase();
+        const rarity = document.getElementById("rarityFilter").value;
+        const color = document.getElementById("colorFilter").value;
+        const bloom = document.getElementById("bloomFilter").value;
+        const product = document.getElementById("productFilter").value.toLowerCase();
+        const ownedOnly = document.getElementById("ownedFilter").checked;
 
-    function renderTable() {
-      const keyword = document.getElementById("nameSearch").value.toLowerCase();
-      const rarity = document.getElementById("rarityFilter").value;
-      const color = document.getElementById("colorFilter").value;
-      const bloom = document.getElementById("bloomFilter").value;
-      const product = document.getElementById("productFilter").value.toLowerCase();
-      const ownedOnly = document.getElementById("ownedFilter").checked;
+        const tbody = document.querySelector("#cardTable tbody");
+        tbody.innerHTML = "";
+        let shown = 0, ownedCount = 0;
 
-      const tbody = document.querySelector("#cardTable tbody");
-      tbody.innerHTML = "";
-      let shown = 0, ownedCount = 0;
+        cards.forEach(card => {
+          const count = card.owned;
+          if (keyword && !card.name.toLowerCase().includes(keyword)) return;
+          if (rarity && card.rarity !== rarity) return;
+          if (color && card.color !== color) return;
+          if (bloom && card.bloom !== bloom) return;
+          if (product && !card.product.toLowerCase().includes(product)) return;
+          if (ownedOnly && (!count || count === 0)) return;
 
-      cards.forEach(card => {
-        const count = card.owned;
-        if (keyword && !card.name.toLowerCase().includes(keyword)) return;
-        if (rarity && card.rarity !== rarity) return;
-        if (color && card.color !== color) return;
-        if (bloom && card.bloom !== bloom) return;
-        if (product && !card.product.toLowerCase().includes(product)) return;
-        if (ownedOnly && (!count || count === 0)) return;
+          shown++; ownedCount += parseInt(count || 0);
 
-        shown++; ownedCount += parseInt(count || 0);
+          const row = document.createElement("tr");
+          row.setAttribute("data-rarity", card.rarity);
+          row.innerHTML = `
+            <td><img src="${card.image}" alt="${card.name}" onclick="showImageModal('${card.image}')"></td>
+            <td>${card.name}</td>
+            <td>${card.id}</td>
+            <td class="rarity">${card.rarity}</td>
+            <td>${card.color}</td>
+            <td>${card.bloom}</td>
+            <td>${card.hp}</td>
+            <td>${card.product}</td>
+            <td><input type="number" min="0" value="${count}" onchange="updateOwned('${card.id}', this.value)"></td>
+          `;
+          tbody.appendChild(row);
+        });
 
-        const row = document.createElement("tr");
-        row.setAttribute("data-rarity", card.rarity);
-        row.innerHTML = `
-          <td><img src="${card.image}" alt="${card.name}" onclick="showImageModal('${card.image}')"></td>
-          <td>${card.name}</td>
-          <td>${card.id}</td>
-          <td class="rarity">${card.rarity}</td>
-          <td>${card.color}</td>
-          <td>${card.bloom}</td>
-          <td>${card.hp}</td>
-          <td>${card.product}</td>
-          <td><input type="number" min="0" value="${count}" onchange="updateOwned('${card.id}', this.value)"></td>
-        `;
-        tbody.appendChild(row);
-      });
+        updateCountDisplay(shown, ownedCount);
+      }
 
-      updateCountDisplay(shown, ownedCount);
-    }
-
-    function updateOwned(id, value) {
-      const num = Math.max(0, parseInt(value) || 0);
-      localStorage.setItem("count_" + id, JSON.stringify(num));
-      const card = cards.find(c => c.id === id);
-      if (card) card.owned = num;
-      renderTable();
-    }
-
-    function updateCountDisplay(total, owned) {
-      const percent = total > 0 ? Math.round((owned / total) * 100) : 0;
-      document.getElementById("countDisplay").textContent =
-        `所持枚数：${owned} / 表示：${total}（平均 ${percent}%）`;
-    }
-
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark");
-      localStorage.setItem("darkMode", document.body.classList.contains("dark"));
-    }
-
-    function importCSV() {
-      const input = document.getElementById("csvInput").value.trim().split("\n");
-      input.forEach(line => {
-        const [id, count] = line.split(",");
-        const num = Math.max(0, parseInt(count) || 0);
+      function updateOwned(id, value) {
+        const num = Math.max(0, parseInt(value) || 0);
         localStorage.setItem("count_" + id, JSON.stringify(num));
         const card = cards.find(c => c.id === id);
         if (card) card.owned = num;
-      });
-      renderTable();
-      alert("CSVを反映しました！");
-    }
-
-    function exportCSV() {
-      const lines = cards
-        .filter(c => c.owned > 0)
-        .map(c => `${c.id},${c.owned}`);
-      const csv = lines.join("\n");
-      navigator.clipboard.writeText(csv)
-        .then(() => alert("所持CSVをクリップボードにコピーしました！"))
-        .catch(() => alert("コピーに失敗しました"));
-    }
-
-    function showImageModal(src) {
-      const modal = document.getElementById("imageModal");
-      modal.querySelector("img").src = src;
-      modal.style.display = "block";
-    }
-
-    function hideImageModal() {
-      document.getElementById("imageModal").style.display = "none";
-    }
-
-    window.onload = () => {
-      if (localStorage.getItem("darkMode") === "true") {
-        document.body.classList.add("dark");
+        renderTable();
       }
 
-      fetch("json_file/card_data.json")
-        .then(response => response.json())
-        .then(rawData => {
-          cards = Object.entries(rawData)
-            .sort(([idA], [idB]) => idA.localeCompare(idB))
-            .map(([key, card]) => ({
-              id: key,
-              name: card.name,
-              rarity: card.rarity,
-              color: card.color ?? "-",
-              bloom: card.bloom_level ?? "-",
-              hp: card.card_type === "ホロメン" ? card.hp : "-",
-              product: card.product,
-              image: card.image_url,
-              url: `https://hololive-official-cardgame.com/cardlist/?id=${card.id}`,
-              owned: parseInt(localStorage.getItem("count_" + card.id) ?? "0")
-            }));
-          setupFilters();
-          renderTable();
-        })
-        .catch(() => alert("JSONファイルの読み込みに失敗しました"));
-    };
-  </script>
+      function updateCountDisplay(total, owned) {
+        const percent = total > 0 ? Math.round((owned / total) * 100) : 0;
+        document.getElementById("countDisplay").textContent =
+          `所持枚数：${owned} / 表示：${total}（平均 ${percent}%）`;
+      }
+
+      function toggleDarkMode() {
+        document.body.classList.toggle("dark");
+        localStorage.setItem("darkMode", document.body.classList.contains("dark"));
+      }
+
+      function importCSV() {
+        const input = document.getElementById("csvInput").value.trim().split("\n");
+        input.forEach(line => {
+          const [id, count] = line.split(",");
+          const num = Math.max(0, parseInt(count) || 0);
+          localStorage.setItem("count_" + id, JSON.stringify(num));
+          const card = cards.find(c => c.id === id);
+          if (card) card.owned = num;
+        });
+        renderTable();
+        alert("CSVを反映しました！");
+      }
+
+      function exportCSV() {
+        const lines = cards
+          .filter(c => c.owned > 0)
+          .map(c => `${c.id},${c.owned}`);
+        const csv = lines.join("\n");
+        navigator.clipboard.writeText(csv)
+          .then(() => alert("所持CSVをクリップボードにコピーしました！"))
+          .catch(() => alert("コピーに失敗しました"));
+      }
+
+      function showImageModal(src) {
+        const modal = document.getElementById("imageModal");
+        modal.querySelector("img").src = src;
+        modal.style.display = "block";
+      }
+
+      function hideImageModal() {
+        document.getElementById("imageModal").style.display = "none";
+      }
+
+      window.onload = () => {
+        if (localStorage.getItem("darkMode") === "true") {
+          document.body.classList.add("dark");
+        }
+
+        fetch("json_file/card_data.json")
+          .then(response => response.json())
+          .then(rawData => {
+            cards = Object.entries(rawData)
+              .sort(([idA], [idB]) => idA.localeCompare(idB))
+              .map(([key, card]) => ({
+                id: key,
+                name: card.name,
+                rarity: card.rarity,
+                color: card.color ?? "-",
+                bloom: card.bloom_level ?? "-",
+                hp: card.card_type === "ホロメン" ? card.hp : "-",
+                product: card.product,
+                image: card.image_url,
+                url: `https://hololive-official-cardgame.com/cardlist/?id=${card.id}`,
+                owned: parseInt(localStorage.getItem("count_" + card.id) ?? "0")
+              }));
+            setupFilters();
+            renderTable();
+          })
+          .catch(() => alert("JSONファイルの読み込みに失敗しました"));
+      };
+    </script>
+  </div> <!-- .container -->
 </body>
 </html>
