--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: sans-serif;
-      margin: 0;
+      margin: 10px;
       font-size: 15px;
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
@@ -49,7 +49,7 @@
       width: 40px;
       background-color: #fff !important;
       color: #000;
-      border: 1px solid #ccc;
+      border: 1px solid #807f7f;
     }
     @media (max-width: 600px) {
       input[type="number"] { width: 36px; }
