--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
     input[type="number"] {
       width: 40px;
-      background-color: #fff !important;
+      background-color: #fff;
       color: #000;
       border: 1px solid #807f7f;
     }
