--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       border-collapse: collapse;
       width: 100%;
       table-layout: auto;
-      max-width: 100%;
     }
     th, td {
       border: 1px solid #ccc;
@@ -30,13 +29,13 @@
       font-size: 15px;
       text-align: left;
     }
-    td:nth-child(3), td.rarity {
-      white-space: nowrap;
-    }
-    td.rarity, th.rarity {
-      font-size: 13px;
+    td:nth-child(3), td.rarity { white-space: nowrap; }
+    td.rarity, th.rarity { font-size: 13px; width: 40px; text-align: center; }
+    input[type="number"] {
       width: 40px;
-      text-align: center;
+      background-color: #fff !important;
+      color: #000;
+      border: 1px solid #ccc;
     }
     img {
       width: 60px;
@@ -44,15 +43,6 @@
       cursor: zoom-in;
       background-color: #fff;
       border: 1px solid #ddd;
-    }
-    input[type="number"] {
-      width: 40px;
-      background-color: #fff !important;
-      color: #000;
-      border: 1px solid #ccc;
-    }
-    @media (max-width: 600px) {
-      input[type="number"] { width: 36px; }
     }
     .controls, .filter-row {
       display: flex;
@@ -65,6 +55,15 @@
       display: flex;
       align-items: center;
       gap: 4px;
+    }
+    .filter-row button {
+      padding: 4px 8px;
+      font-size: 13px;
+      cursor: pointer;
+    }
+    select {
+      font-size: 15px;
+      padding: 6px;
     }
     .dark {
       background-color: #222;
@@ -79,7 +78,6 @@
     .dark #cardTable td, .dark #cardTable th { color: #111; }
     .dark tr[data-rarity] td { color: #000; }
 
-    /* トグルスイッチ */
     .toggle-switch {
       display: inline-flex;
       align-items: center;
@@ -95,9 +93,7 @@
       outline: none;
       transition: background 0.3s;
     }
-    .toggle-switch input:checked {
-      background: #4caf50;
-    }
+    .toggle-switch input:checked { background: #4caf50; }
     .toggle-switch input[type="checkbox"]::before {
       content: "";
       position: absolute;
@@ -109,77 +105,29 @@
       border-radius: 50%;
       transition: transform 0.3s;
     }
-    .toggle-switch input[type="checkbox"]:checked::before {
+    .toggle-switch input:checked::before {
       transform: translateX(20px);
     }
 
-    /* レア背景色（13種） */
-    tr[data-rarity="C"]   { background-color: #ffffff; }
-    tr[data-rarity="OC"]  { background-color: #f4f4f4; }
-    tr[data-rarity="OSR"] { background-color: #ffe5f0; }
-    tr[data-rarity="OUR"] { background-color: #ffece0; }
-    tr[data-rarity="P"]   { background-color: #fff9e6; }
-    tr[data-rarity="R"]   { background-color: #f9fff0; }
-    tr[data-rarity="RR"]  { background-color: #e6f5ff; }
-    tr[data-rarity="S"]   { background-color: #fff3ff; }
-    tr[data-rarity="SEC"] { background-color: #fdfdce; }
-    tr[data-rarity="SR"]  { background-color: #fff6e6; }
-    tr[data-rarity="SY"]  { background-color: #f0fffc; }
-    tr[data-rarity="U"]   { background-color: #f3f3f3; }
-    tr[data-rarity="UR"]  { background-color: #ffe8f8; }
+    tr[data-rarity="-"]    { background-color: #ffffff; }
+    tr[data-rarity="C"]    { background-color: #ffffff; }
+    tr[data-rarity="OC"]   { background-color: #f4f4f4; }
+    tr[data-rarity="OSR"]  { background-color: #ffe5f0; }
+    tr[data-rarity="OUR"]  { background-color: #ffece0; }
+    tr[data-rarity="P"]    { background-color: #fff9e6; }
+    tr[data-rarity="R"]    { background-color: #f9fff0; }
+    tr[data-rarity="RR"]   { background-color: #e6f5ff; }
+    tr[data-rarity="S"]    { background-color: #fff3ff; }
+    tr[data-rarity="SEC"]  { background-color: #fdfdce; }
+    tr[data-rarity="SR"]   { background-color: #fff6e6; }
+    tr[data-rarity="SY"]   { background-color: #f0fffc; }
+    tr[data-rarity="U"]    { background-color: #f3f3f3; }
+    tr[data-rarity="UR"]   { background-color: #ffe8f8; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>ホロライブカード一覧</h2>
-
-    <div class="controls">
-      <button onclick="toggleDarkMode()">🌗 モード切替</button>
-      <input type="text" id="nameSearch" placeholder="カード名検索" oninput="renderTable()">
-    </div>
-
-    <div class="filter-row" id="ownedStateGroup">
-      <label><input type="checkbox" name="ownedState" value="owned" checked> 所持あり</label>
-      <label><input type="checkbox" name="ownedState" value="unowned" checked> 所持なし</label>
-    </div>
-
-    <div class="filter-row toggle-switch">
-      <label>
-        <input type="checkbox" id="filterMode">
-      </label>
-      <span class="label">OR条件</span>
-    </div>
-
-    <div class="filter-row" id="rarityFilter"></div>
-    <div class="filter-row" id="colorFilter"></div>
-    <div class="filter-row" id="bloomFilter"></div>
-    <div class="filter-row" id="productFilter"></div>
-
-    <div id="countDisplay" style="font-weight:bold; margin-bottom:10px;"></div>
-
-    <table id="cardTable">
-      <thead>
-        <tr>
-          <th>画像</th>
-          <th>名前</th>
-          <th>番号</th>
-          <th class="rarity">レア</th>
-          <th>色</th>
-          <th>Bloom</th>
-          <th>HP</th>
-          <th>収録</th>
-          <th>枚数</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-
-    <h3>CSVインポート・エクスポート</h3>
-    <div class="controls">
-      <textarea id="csvInput" rows="4" placeholder="id,枚数 のCSVを貼り付けてください"></textarea>
-      <button onclick="importCSV()">📥 CSVインポート</button>
-      <button onclick="exportCSV()">📤 所持CSVをコピー</button>
-    </div>
+    <!-- 以下にフィルターUI、表、CSVエリア、画像モーダル、JS処理が続きます -->
     <div id="imageModal" onclick="hideImageModal()" style="
       display:none;
       position:fixed;
@@ -195,10 +143,18 @@
     <script>
       let cards = [];
 
+      function selectAll(id) {
+        document.querySelectorAll(`#${id} input[type="checkbox"]`).forEach(cb => cb.checked = true);
+        renderTable();
+      }
+      function clearAll(id) {
+        document.querySelectorAll(`#${id} input[type="checkbox"]`).forEach(cb => cb.checked = false);
+        renderTable();
+      }
+
       function setupFilters() {
         const raritySet = new Set(), colorSet = new Set(),
               bloomSet = new Set(), productSet = new Set();
-
         cards.forEach(c => {
           raritySet.add(c.rarity);
           colorSet.add(c.color);
@@ -206,32 +162,43 @@
           productSet.add(c.product);
         });
 
-        function populate(containerId, items) {
-          const container = document.getElementById(containerId);
-          container.innerHTML = "";
-          [...items].sort().forEach(val => {
+        function populateCheck(id, items) {
+          const container = document.getElementById(id);
+          items.forEach(val => {
             const label = document.createElement("label");
             label.innerHTML = `<input type="checkbox" value="${val}" checked> ${val}`;
             container.appendChild(label);
           });
         }
 
-        populate("rarityFilter", raritySet);
-        populate("colorFilter", colorSet);
-        populate("bloomFilter", bloomSet);
-        populate("productFilter", productSet);
+        function populateSelect(id, items, label) {
+          const select = document.getElementById(id);
+          select.innerHTML = `<option value="">${label}</option>`;
+          [...items].sort().forEach(val => {
+            const opt = document.createElement("option");
+            opt.value = val;
+            opt.textContent = val;
+            select.appendChild(opt);
+          });
+        }
+
+        populateCheck("rarityFilter", [...raritySet].sort());
+        populateCheck("colorFilter", [...colorSet].sort());
+        populateCheck("bloomFilter", [...bloomSet].sort());
+        populateSelect("productFilter", productSet, "収録商品");
       }
 
       function renderTable() {
         const keyword = document.getElementById("nameSearch").value.toLowerCase();
         const isOR = document.getElementById("filterMode").checked;
-
         const getChecked = id => [...document.querySelectorAll(`#${id} input:checked`)].map(el => el.value);
+
         const rarity = getChecked("rarityFilter");
         const color = getChecked("colorFilter");
         const bloom = getChecked("bloomFilter");
-        const product = getChecked("productFilter").map(p => p.toLowerCase());
-        const ownedStates = [...document.querySelectorAll('input[name="ownedState"]:checked')].map(el => el.value);
+        const product = document.getElementById("productFilter").value.toLowerCase();
+        const ownedStates = [...document.querySelectorAll('input[name="ownedState"]:checked')]
+          .map(el => el.value);
 
         const tbody = document.querySelector("#cardTable tbody");
         tbody.innerHTML = "";
@@ -253,12 +220,11 @@
             rarity: rarity.includes(card.rarity),
             color: color.includes(card.color),
             bloom: bloom.includes(card.bloom),
-            product: product.length === 0 || product.some(p => card.product.toLowerCase().includes(p))
+            product: !product || card.product.toLowerCase().includes(product)
           };
 
           const matchCount = Object.values(match).filter(Boolean).length;
           const total = Object.keys(match).length;
-
           if ((isOR && matchCount === 0) || (!isOR && matchCount < total)) return;
 
           shown++; ownedCount += parseInt(count || 0);
@@ -339,7 +305,7 @@
               .map(([key, card]) => ({
                 id: key,
                 name: card.name,
-                rarity: card.rarity,
+                rarity: card.rarity ?? "-",
                 color: card.color ?? "-",
                 bloom: card.bloom_level ?? "-",
                 hp: card.card_type === "ホロメン" ? card.hp : "-",
