--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       cursor: pointer;
       border-radius: 6px;
     }
+    .sticky-info {
+      position: sticky;
+      top: 0;
+      background: #fff;
+      padding: 10px 0;
+      z-index: 100;
+      border-bottom: 1px solid #ccc;
+    }
     .controls, .filter-row {
       display: flex;
       flex-wrap: wrap;
@@ -65,35 +73,8 @@
       font-weight: bold;
       padding: 0 6px;
     }
-    .toggle-switch {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-    }
-    .toggle-switch input[type="checkbox"] {
-      width: 40px;
-      height: 20px;
-      appearance: none;
-      background: #ccc;
-      border-radius: 10px;
-      position: relative;
-      outline: none;
-      transition: background 0.3s;
-    }
-    .toggle-switch input:checked { background: #4caf50; }
-    .toggle-switch input::before {
-      content: "";
-      position: absolute;
-      left: 2px;
-      top: 2px;
-      width: 16px;
-      height: 16px;
-      background: white;
-      border-radius: 50%;
-      transition: transform 0.3s;
-    }
-    .toggle-switch input:checked::before {
-      transform: translateX(20px);
+    #filtersWrapper {
+      transition: all 0.3s ease;
     }
     table {
       border-collapse: collapse;
@@ -122,7 +103,6 @@
       border: 1px solid #ddd;
     }
 
-    /* レアリティごとの背景色（ハイフン含む） */
     tr[data-rarity="-"]    { background-color: #ffffff; }
     tr[data-rarity="C"]    { background-color: #ffffff; }
     tr[data-rarity="OC"]   { background-color: #f4f4f4; }
@@ -153,53 +133,52 @@
       <input type="text" id="nameSearch" placeholder="カード名検索" oninput="renderTable()" />
     </div>
 
-    <fieldset class="filter-group">
-      <legend>所持状態</legend>
-      <div class="filter-row" id="ownedStateGroup">
-        <label><input type="checkbox" name="ownedState" value="owned" checked onchange="renderTable()"> 所持あり</label>
-        <label><input type="checkbox" name="ownedState" value="unowned" checked onchange="renderTable()"> 所持なし</label>
-      </div>
-    </fieldset>
+    <div class="controls">
+      <button onclick="toggleFilters()">🔽 フィルター表示／非表示</button>
+    </div>
 
-    <fieldset class="filter-group">
-      <legend>マッチ条件</legend>
-      <div class="filter-row toggle-switch">
-        <label>
-          <input type="checkbox" id="filterMode" onchange="renderTable()" />
-        </label>
-        <span class="label">OR条件</span>
-      </div>
-    </fieldset>
+    <div id="filtersWrapper">
+      <fieldset class="filter-group">
+        <legend>所持状態</legend>
+        <div class="filter-row" id="ownedStateGroup">
+          <label><input type="checkbox" name="ownedState" value="owned" checked onchange="renderTable()"> 所持あり</label>
+          <label><input type="checkbox" name="ownedState" value="unowned" checked onchange="renderTable()"> 所持なし</label>
+        </div>
+      </fieldset>
 
-    <fieldset class="filter-group">
-      <legend>レアリティ</legend>
-      <button onclick="selectAll('rarityFilter')">全選択</button>
-      <button onclick="clearAll('rarityFilter')">全部外す</button>
-      <div class="filter-row" id="rarityFilter"></div>
-    </fieldset>
+      <fieldset class="filter-group">
+        <legend>レアリティ</legend>
+        <button onclick="selectAll('rarityFilter')">全選択</button>
+        <button onclick="clearAll('rarityFilter')">全部外す</button>
+        <div class="filter-row" id="rarityFilter"></div>
+      </fieldset>
 
-    <fieldset class="filter-group">
-      <legend>色</legend>
-      <button onclick="selectAll('colorFilter')">全選択</button>
-      <button onclick="clearAll('colorFilter')">全部外す</button>
-      <div class="filter-row" id="colorFilter"></div>
-    </fieldset>
+      <fieldset class="filter-group">
+        <legend>色</legend>
+        <button onclick="selectAll('colorFilter')">全選択</button>
+        <button onclick="clearAll('colorFilter')">全部外す</button>
+        <div class="filter-row" id="colorFilter"></div>
+      </fieldset>
 
-    <fieldset class="filter-group">
-      <legend>Bloom</legend>
-      <button onclick="selectAll('bloomFilter')">全選択</button>
-      <button onclick="clearAll('bloomFilter')">全部外す</button>
-      <div class="filter-row" id="bloomFilter"></div>
-    </fieldset>
+      <fieldset class="filter-group">
+        <legend>Bloom</legend>
+        <button onclick="selectAll('bloomFilter')">全選択</button>
+        <button onclick="clearAll('bloomFilter')">全部外す</button>
+        <div class="filter-row" id="bloomFilter"></div>
+      </fieldset>
 
-    <fieldset class="filter-group">
-      <legend>収録商品</legend>
-      <select id="productFilter" onchange="renderTable()">
-        <option value="">収録商品（選択）</option>
-      </select>
-    </fieldset>
+      <fieldset class="filter-group">
+        <legend>収録商品</legend>
+        <select id="productFilter" onchange="renderTable()">
+          <option value="">収録商品（選択）</option>
+        </select>
+      </fieldset>
+    </div>
 
-    <div id="countDisplay" style="font-weight:bold; margin-bottom:10px;"></div>
+    <div class="sticky-info">
+      <div id="countDisplay" style="font-weight:bold;"></div>
+      <div id="typeDisplay" style="font-weight:bold;"></div>
+    </div>
 
     <table id="cardTable">
       <thead>
@@ -249,6 +228,11 @@
         renderTable();
       }
 
+      function toggleFilters() {
+        const el = document.getElementById("filtersWrapper");
+        el.style.display = el.style.display === "none" ? "block" : "none";
+      }
+
       function setupFilters() {
         const raritySet = new Set(), colorSet = new Set(), bloomSet = new Set(), productSet = new Set();
         cards.forEach(c => {
@@ -286,7 +270,6 @@
 
       function renderTable() {
         const keyword = document.getElementById("nameSearch").value.toLowerCase();
-        const isOR = document.getElementById("filterMode").checked;
         const getChecked = id => [...document.querySelectorAll(`#${id} input:checked`)].map(el => el.value);
 
         const rarity = getChecked("rarityFilter");
@@ -311,15 +294,13 @@
 
           const match = {
             name: !keyword || card.name.toLowerCase().includes(keyword),
-            rarity: rarity.includes(card.rarity),
-            color: color.includes(card.color),
-            bloom: bloom.includes(card.bloom),
+            rarity: rarity.length === 0 || rarity.includes(card.rarity),
+            color: color.length === 0 || color.includes(card.color),
+            bloom: bloom.length === 0 || bloom.includes(card.bloom),
             product: !product || card.product.toLowerCase().includes(product)
           };
 
-          const matchCount = Object.values(match).filter(Boolean).length;
-          const total = Object.keys(match).length;
-          if ((isOR && matchCount === 0) || (!isOR && matchCount < total)) return;
+          if (Object.values(match).includes(false)) return;
 
           shown++;
           if (card.owned > 0) ownedTypes++;
@@ -344,6 +325,8 @@
         const ratio = shown > 0 ? Math.round((ownedTypes / shown) * 100) : 0;
         document.getElementById("countDisplay").textContent =
           `所持枚数：${ownedCount} / 表示：${shown}種類（所持率 ${ratio}%）`;
+        document.getElementById("typeDisplay").textContent =
+          `所持種類数：${ownedTypes}`;
       }
 
       function updateOwned(id, value) {
